# oaidl-safe

./: .gitignore  Cargo.toml  LICENSE  README.md  changelog.md
src/: array.rs  bstr.rs  errors.rs  lib.rs  ptr.rs  types.rs  variant.rs  vartype.rs
